[package]
name = "bazel-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-stream = "0.3.5"
axum = { version = "0.6.20", features = ["macros"] }
axum-extra = { version = "0.7.7", features = ["async-read-body"] }
bytes = "1.4.0"
futures = "0.3.28"
rust-s3 = "0.34.0-beta3"
tokio = { version = "1.30.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tonic = "0.9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "fmt"] }
